refactor: logstash 进程管理功能, state 逻辑从process级别重构至 machine级别.